// proto for the reservation

syntax = "proto3";

package reservationproto;

/*
reservation will be the reservationservice.
*/
service reservation {

    // Function for making a Reservationsrequest.
    rpc MakeReservation(MakeReservationRequest) returns (MakeReservationResponse);

    // Function to Accept a Reservation.
    rpc AcceptReservation(AcceptReservationRequest) returns (AcceptReservationResponse);

    // Function to delete a Reservation.
    rpc DeleteReservation(DeleteReservationRequest) returns (DeleteReservationResponse);

    // Function to change a Reservation.
    rpc ChangeReservation(ChangeReservationRequest) returns (ChangeReservationResponse);

    // Function to Find a Reservation.
    rpc ShowReservations(ShowReservationsRequest) returns (ShowReservationsResponse);

    // Function to stream all reservations of a user.
    rpc StreamUsersReservations(StreamUsersReservationsRequest) returns (StreamUsersReservationsResponse);

    // Function to get the information whether or not a user has still some reservations.
    rpc HasReservations(HasReservationsRequest) returns (HasReservationsResponse);
}

